Reparo bugs, agrego endpoints users-categories
