# backend/src/routes/product.js
@@ -3,7 +3,7 @@ const controllers = require("../controllers/product");
 const auth = require("../middleware/auth");
 
 // Product routes
-router.get("/", auth ,controllers.getProducts);
+router.get("", auth ,controllers.getProducts);
 router.get("/query", auth, controllers.queryProducts);
 router.get("/category/:idCat", auth, controllers.getProductsByCategory);
 
